--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-video",
-    "version": "5.1.0-alpha8",
+    "version": "5.2.1",
     "description": "A <Video /> element for react-native",
     "main": "Video.js",
     "license": "MIT",
@@ -37,6 +37,7 @@
         "react-native": "^0.61.5"
     },
     "dependencies": {
+        "deprecated-react-native-prop-types": "^2.2.0",
         "keymirror": "^0.1.1",
         "prop-types": "^15.7.2",
         "shaka-player": "^2.5.9"
